tests/basic/check/prim/080.pan.out
tests/basic/check/prim/080.pan:2:7-11: error: invalid subtype: ğŸ™ <: ğ•Š
tests/basic/check/prim/080.pan:5:7-11: error: invalid subtype: ğ”¹ <: ğ•Š
tests/basic/check/prim/080.pan:8:7-8: error: invalid subtype: â„¤ <: ğ•Š
tests/basic/check/prim/080.pan:11:7-10: error: invalid subtype: â„‚ğ•™ <: ğ•Š