tests/basic/check/prim/080.pan
f80 : string
f80 = unit

f81 : string
f81 = true

f82 : string
f82 = 1

f83 : string
f83 = 'a'
